<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.etherblood.ethercards</groupId>
    <artifactId>ethercards</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>
    <modules>
        <module>entities</module>
        <module>rules</module>
        <module>gui</module>
        <module>ai</module>
        <module>network-api</module>
        <module>client</module>
        <module>game-events-api</module>
        <module>templates-api</module>
        <module>templates-implementation</module>
        <module>game-server</module>
        <module>rules-classic</module>
    </modules>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <version.game-tools>169148796235c281a561545c0a7465cea5f0cce5</version.game-tools>
        <version.auth-token>c7a6c8b4b9d79dac73aec617de4225e17c010405</version.auth-token>
    </properties>
    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.0.4</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.8.6</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>network-server</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>network-shared</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios.game-tools</groupId>
                <artifactId>network-client</artifactId>
                <version>${version.game-tools}</version>
            </dependency>
            <dependency>
                <groupId>com.github.destrostudios</groupId>
                <artifactId>auth-token</artifactId>
                <version>${version.auth-token}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
